<resources>
    <string name="app_name">KPay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_amount">Enter Your Amount</string>
    <string name="generate_pay">Generate Pay</string>
    <string name="todo">TODO</string>
    <string name="scan">scan QR</string>
    <string name="payment">PAYMENT</string>
    <string name="Recipient">Recipient : </string>
    <string name="amount">Amount</string>
</resources>
