<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GeneratorActivity"

    >

    <EditText
        android:id="@+id/Amount"
        android:layout_width="392dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:hint="@string/enter_your_amount"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType=""
        android:autofillHints="" />


    <Button
        android:id="@+id/Generate_btn"

        android:layout_width="285dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/generate_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Amount" />

    <ImageView
        android:id="@+id/imageQr"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        app:layout_constraintEnd_toEndOf="@+id/Generate_btn"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="@+id/Generate_btn"
        app:layout_constraintTop_toBottomOf="@+id/Generate_btn"
        android:contentDescription="@string/todo" />




</android.support.constraint.ConstraintLayout>